<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_InterlockList" Id="{7ab115a9-8ad9-4d57-b427-1634f5f82e75}">
    <Declaration><![CDATA[TYPE ST_InterlockList :
STRUCT
	arr_Interlocks : ARRAY[0..GVL.g_LEN_INTERLOCK_LIST-1] OF ST_Interlock;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>